Swap classes for ids

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>UI</title>
   </head>
   <body>
-    <button class="rock">Rock</button>
-    <button class="paper">Paper</button>
-    <button class="scissors">Scissors</button>
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
   </body>
   <script src="rps.js"></script>
 </html>
